# redis-vault

./: .dockerignore  .gitignore  .justfile  ;  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.rust  Jenkinsfile  Makefile  README.md  common.just  container.just  deny.toml  git.just  podman.mk  renovate.json  results.json  rust.just  utils.sh
.ci/: CLAUDE.md  Dockerfile.python  Dockerfile.rust  README.md  builder.just  container.just  git.just  python.just  rust.just  utils.sh
.ci/vars/: buildPodman.groovy  container.groovy  gitea.groovy  justContainer.groovy  notify.groovy
docker/: docker-compose.yml
examples/: config.yaml
k8s/: deployment.yaml
src/: backup.rs  config.rs  logging.rs  main.rs  metrics.rs
src/storage/: gcs.rs  mod.rs  s3.rs
vars/: buildPodman.groovy  justContainer.groovy  protectBuildFiles.groovy
