[package]
name = "redis-vault"
version = "0.2.0"
edition = "2024"
repository = "https://git.zero-downtime.net/ZeroDownTime/redis-vault"
license = "AGPL-3.0-or-later"
keywords = ["redis", "kubernetes", "sidecar"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-sdk-s3 = "1.115"
aws-config = "1.8"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
gcloud-storage = "1.1"
git-version = "0.3.9"
http-body-util = "0.1"
humantime = "2.3"
hyper = { version = "1.8", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
prometheus = "0.14"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
strip = true
lto = true
#opt-level = "z"
#codegen-units = 1
