[package]
name = "redis-vault"
version = "0.2.4"
edition = "2024"
repository = "https://git.zero-downtime.net/ZeroDownTime/redis-vault"
license = "AGPL-3.0-or-later"
keywords = ["redis", "kubernetes", "sidecar"]

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
async-trait = { version = "0.1", default-features = false }
aws-sdk-s3 = { version = "1.132", default-features = false, features = ["default-https-client", "rt-tokio", "rustls", "http-1x", "sigv4a"] }
aws-config = { version = "1.8", default-features = false, features = ["default-https-client", "rt-tokio"] }
bytes = { version = "1.11", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
clap = { version = "4.6", default-features = false, features = ["std", "help", "usage", "error-context", "derive", "env"] }
gcloud-storage = { version = "1.3", default-features = false, features = ["auth", "rustls-tls", "jwt-aws-lc-rs"] }
git-version = { version = "0.3.9", default-features = false }
http-body-util = { version = "0.1", default-features = false }
humantime = { version = "2.3", default-features = false }
hyper = { version = "1.9", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio", "server", "server-auto"] }
prometheus = { version = "0.14", default-features = false }
redis = { version = "1.2", default-features = false, features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9", default-features = false }
thiserror = { version = "2.0", default-features = false, features = ["std"] }
tokio = { version = "1.52", default-features = false, features = ["macros", "rt-multi-thread", "sync", "time", "fs", "net", "io-util"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter", "json"] }

[profile.release]
strip = true
lto = true
#opt-level = "z"
#codegen-units = 1
